--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -19,32 +19,35 @@
     &__items {
         margin-top: 110px;
         display: flex;
-        justify-content: space-around; 
+        justify-content: space-between;  
         column-gap: 2%;    
     }
-    
-    &__item {
-        width: 94%;
-        min-height: 413px;
+    &__wrapper {
+        min-height: 280px;
+        padding-top: 10px;
         padding-left: 20px;
         padding-right: 20px;
-        padding-top: 40px;
         padding-bottom: 10px;
-        position: relative; 
-        @include before_square;
-        @include after_square;
-        
-    } 
-    &__btn{
+    }
+    &__item {
+        width: 94%;   
+    }
+    
+    &__btn {
         margin: 0 auto;
         margin-top: 70px; 
+
         .btn {
             display: block;  
         }
     }
     .item__img {
-        height: 217px;
+        height: 180px;
         margin: 0 auto;
+        padding-top: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 20px;
         
         img {
             width: 100%;
@@ -54,21 +57,38 @@
         }
 
     .item__wrapper {
-        margin-top: 9px;
+        margin-bottom: 10px;
     }
     .item__title {
-        margin-top: 9px;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: 700;
         text-align: center;
         }
+
     .item__text {
         margin-top: 10px;
         display: block;
-        font-size: 14px;
+        font-size: 12px;
         text-align: center;
         min-height: 50px;
         }    
+}
+@media (max-width: 1111px){
+    .advantages {
+        .item__title {
+            font-size: 15px;
+            }
+        .item__text {
+                font-size: 12px;
+                }
+    }
+}
+@media (max-width: 1024px){
+    .advantages {
+        .item__text {
+                font-size: 11px;
+                }
+    }
 }
 @media (max-width: $tablet)  {
     .advantages {
@@ -81,46 +101,98 @@
     &__items {
         margin-top: 80px;
         column-gap: 3%;
+
+        .borderBold {
+            &::before {
+                border: 4px solid #85D454;
+            }    
+        } 
     }
-    &__item {
-        width: 91%;
-        min-height: 250px;
+    &__wrapper {
+        min-height: 230px;
+        padding-top: 10px;
         padding-left: 10px;
         padding-right: 10px;
-        padding-top: 30px;
-        @include before_square; 
-        &:before{
-            border-bottom:  3px solid #85D454;
-            border-right:  3px solid #85D454;
-        } 
-        @include after_square; 
-        &::after{
-            border-top:  3px solid #85D454;
-            border-left:  3px solid #85D454;
-        } 
+        padding-bottom: 10px;
+    }
+
+    &__item {
+        width: 91%;
     } 
     &__btn{ 
         margin-top: 60px; 
 
     }
     .item__img {  
-        height: 120px;
+        height: 130px;
+        padding-top: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
     }
 
     .item__title {
-        margin-top: 20px;
+        padding-top: 20px;
         font-size: 15px;
         }
 
     .item__text {
-        display: block;
-        margin-top: 5px;
+        min-height: 45px;
         font-size: 10px;
-        overflow: hidden;
         }   
     } 
 }
-@media (max-width: $mobile)  {
+@media(max-width: 887px){
+    .advantages {
+        .item__title {
+            font-size: 12px;
+            }
+        .item__text {
+            
+            } 
+
+    }
+    
+}
+@media(max-width: $smallTablet) {
+    
+    .advantages {
+        &__title {
+            font-size: 32px;
+        }
+        &__items {
+            flex-wrap: wrap;
+            justify-content: space-around;
+            width: 80%;
+            row-gap: 10px;
+        }
+        &__wrapper {
+            min-height: 200px;
+            margin-bottom: 5px;
+        }
+        &__item {
+            width: 160px;
+        }
+
+        .item__title {
+            font-size: 13px;
+            }
+
+        .item__img {  
+            height: 90px;
+            padding-top: 20px;
+            padding-left: 5px;
+            padding-right: 5px;
+            padding-bottom: 5px;
+        }
+
+        .item__text {
+            min-height: 40px;
+            font-size: 10px;
+        } 
+    }
+}
+@media (max-width: 484px){
     .advantages {
         margin-top: 164px;
         
@@ -132,45 +204,44 @@
     &__items {
         margin-top: 15px;
         display: flex;
+        flex-wrap: nowrap;
         flex-direction: column;
         align-items: center;
         row-gap: 10px; 
+        width: 100%;
+        .borderBold {
+            border-radius: 15px; 
+            &::before {
+                border: 2px solid #85D454;
+                border-radius: 15px;
+            } 
+        }  
     }
-    
     &__item {
+        width: 100%;
+    } 
+    &__wrapper {
         display: flex;
         column-gap: 7%;
         align-items: flex-start;
         min-height: 80px;
-        padding-bottom: 5px;
-        padding-top: 15px;
+        margin-bottom: 0;
+        padding-bottom: 0;
+        padding-top: 0; 
+    }
 
-        @include before_square; 
-        &:before{
-            border-bottom:  3px solid #85D454;
-            border-right:  3px solid #85D454;
-            filter: blur(1px);
-            border-radius: 15px;
-        } 
-        @include after_square; 
-        &::after{
-            border-top:  3px solid #85D454;
-            border-left:  3px solid #85D454;
-            filter: blur(1px);
-            border-radius: 15px;
-        } 
-    } 
     &__btn{
         margin-top: 40px;
         text-align: center; 
     }
     .item__img {
         width: 22%;
-        height: 50px;
+        height: 70px;
     }
     .item__wrapper {
         width: 75%;
         margin-top: 0;
+        margin-bottom: 0;
     }
 
     .item__title {
@@ -183,11 +254,7 @@
         min-height: 40px;
         font-size: 10px;
         text-align: left; 
+        padding-bottom: 6px;
         }   
     } 
 }
-
-
-
-
-
