--- a/src/components/BorderThin/BorderThin.scss
+++ b/src/components/BorderThin/BorderThin.scss
@@ -3,6 +3,7 @@
 .borderThin {
     position: relative;
         &:before {
+            box-sizing: border-box;
             position: absolute;
             width: 100%;
             height: 100%;
