--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -1,7 +1,11 @@
 @import "../../styles/_vars.scss";
 @import "../../styles/_mixin.scss";
 
-
+#dark .advantages {
+    .borderBold {
+        background: rgba(255, 255, 255, 0.08);  
+    }
+}
 .advantages {
     margin-top: 305px;
     
@@ -20,17 +24,22 @@
         margin-top: 110px;
         display: flex;
         justify-content: space-between;  
-        column-gap: 2%;    
-    }
-    &__wrapper {
-        min-height: 280px;
-        padding-top: 10px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 10px;
+        column-gap: 2%;
+
+        .borderBold{
+            width: 23%;   
+        } 
+        .borderBold__inner{
+            width: 100%;
+            padding-top: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 10px;
+        }
     }
     &__item {
-        width: 94%;   
+        display: flex;
+        flex-direction: column;
     }
     
     &__btn {
@@ -42,9 +51,9 @@
         }
     }
     .item__img {
-        height: 180px;
+        height: 217px;
         margin: 0 auto;
-        padding-top: 20px;
+        padding-top: 45px;
         padding-left: 20px;
         padding-right: 20px;
         padding-bottom: 20px;
@@ -60,44 +69,32 @@
         margin-bottom: 10px;
     }
     .item__title {
-        font-size: 18px;
+        font-size: 24px;
+        line-height: 30px;
         font-weight: 700;
         text-align: center;
         }
 
     .item__text {
         margin-top: 10px;
-        display: block;
-        font-size: 12px;
+        font-size: 14px;
+        line-height: 18px;
         text-align: center;
         min-height: 50px;
         }    
 }
-@media (max-width: 1111px){
-    .advantages {
-        .item__title {
-            font-size: 15px;
-            }
-        .item__text {
-                font-size: 12px;
-                }
+@media (max-width: 1344px){
+    .advantages {   
+    .item__title {
+        font-size: 20px;
+        line-height: 28px;
+        }
     }
 }
-@media (max-width: 1024px){
+
+@media (max-width: 1137px){
     .advantages {
-        .item__text {
-                font-size: 11px;
-                }
-    }
-}
-@media (max-width: $tablet)  {
-    .advantages {
-        margin-top: 485px;
         
-    &__title {
-        margin: 0 auto;
-    }
-    
     &__items {
         margin-top: 80px;
         column-gap: 3%;
@@ -108,21 +105,11 @@
             }    
         } 
     }
-    &__wrapper {
-        min-height: 230px;
-        padding-top: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-    }
 
-    &__item {
-        width: 91%;
-    } 
     &__btn{ 
         margin-top: 60px; 
-
     }
+
     .item__img {  
         height: 130px;
         padding-top: 20px;
@@ -133,28 +120,39 @@
 
     .item__title {
         padding-top: 20px;
-        font-size: 15px;
+        font-size: 18px;
         }
 
     .item__text {
         min-height: 45px;
-        font-size: 10px;
+        font-size: 13px;
         }   
     } 
 }
-@media(max-width: 887px){
-    .advantages {
-        .item__title {
+@media (max-width: 1055px){
+    .advantages {   
+    .item__title {
+        font-size: 16px;
+        }
+    .item__text {
             font-size: 12px;
-            }
-        .item__text {
-            
-            } 
-
+        } 
     }
     
 }
-@media(max-width: $smallTablet) {
+@media (max-width: $tablet)  {
+    .advantages {   
+        .item__title {
+            font-size: 14px;
+            }
+        .item__text {
+                font-size: 10px;
+            } 
+        }
+
+}
+
+@media(max-width: 883px) {
     
     .advantages {
         &__title {
@@ -162,20 +160,18 @@
         }
         &__items {
             flex-wrap: wrap;
-            justify-content: space-around;
-            width: 80%;
-            row-gap: 10px;
-        }
-        &__wrapper {
-            min-height: 200px;
-            margin-bottom: 5px;
-        }
-        &__item {
-            width: 160px;
+            justify-content: center;
+            column-gap: 160px;
+            row-gap: 60px;
+
+            .borderBold {
+                width: 160px; 
+                min-height: 230px;  
+            }   
         }
 
         .item__title {
-            font-size: 13px;
+            font-size: 15px;
             }
 
         .item__img {  
@@ -185,6 +181,9 @@
             padding-right: 5px;
             padding-bottom: 5px;
         }
+        .item__title {
+            font-size: 13px;
+            }
 
         .item__text {
             min-height: 40px;
@@ -192,7 +191,17 @@
         } 
     }
 }
-@media (max-width: 484px){
+
+@media (max-width:839px) {
+    .advantages {
+    &__items {
+        flex-wrap: wrap;
+        justify-content: center;
+        column-gap: 120px;
+}
+}
+}
+@media (max-width: 526px){
     .advantages {
         margin-top: 164px;
         
@@ -202,35 +211,35 @@
     }
     
     &__items {
-        margin-top: 15px;
-        display: flex;
+        margin-top: 20px;
         flex-wrap: nowrap;
         flex-direction: column;
         align-items: center;
         row-gap: 10px; 
-        width: 100%;
+
         .borderBold {
+            width: 100%;
+            min-height: 80px;
             border-radius: 15px; 
             &::before {
                 border: 2px solid #85D454;
                 border-radius: 15px;
             } 
+            
+            .borderBold__inner{
+                padding-bottom: 0;
+                padding-top: 0;
+            }
         }  
     }
     &__item {
         width: 100%;
-    } 
-    &__wrapper {
-        display: flex;
+        flex-direction: row;
         column-gap: 7%;
         align-items: flex-start;
-        min-height: 80px;
-        margin-bottom: 0;
-        padding-bottom: 0;
-        padding-top: 0; 
-    }
+    } 
 
-    &__btn{
+    &__btn {
         margin-top: 40px;
         text-align: center; 
     }
@@ -239,22 +248,24 @@
         height: 70px;
     }
     .item__wrapper {
-        width: 75%;
-        margin-top: 0;
+        padding-top: 20px;
+        padding-bottom: 0;
         margin-bottom: 0;
+        width: 75%;
     }
 
     .item__title {
+        padding-top: 0;
         margin-top: 0;
         font-size: 15px;
         text-align: left;
         }
     .item__text {
-        margin-top: 1px;
-        min-height: 40px;
+        margin: 0;
+        padding-top: 0;
         font-size: 10px;
+        line-height: 13px;
         text-align: left; 
-        padding-bottom: 6px;
         }   
     } 
 }
