--- a/src/components/BecomeMember/BecomeMember.scss
+++ b/src/components/BecomeMember/BecomeMember.scss
@@ -9,8 +9,8 @@
         display: flex;
         flex-direction: column;
         align-items: center; 
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 
     &__steps {
@@ -61,12 +61,23 @@
         }      
     }
 }
+@media (max-width: 1076px) {
+    .member {
+        &__title {
+            font-size: 40px;
+        }
+        &__subTitle {
+            font-size: 22px;    
+        }
+}
+}
 @media (max-width: $tablet)  {
     .member{
         margin-top: 75px;
         margin-bottom: 83px;
+
         &__title {
-            margin-top: 30px;
+            margin-top: 35px;
             font-size: 30px;
         }
         .step__wrapper {
@@ -80,7 +91,7 @@
             font-size: 20px;    
         }
         &__steps {
-            width: 389px;
+            width: 360px;
             margin-top: 80px;  
         }
         .step__first, 
@@ -94,8 +105,8 @@
                 left: -15px;
             }
             &::after{
-                width: 80px;
-                top: 12px;
+                width: 72px;
+                top: 14px;
                 left: 31px;
             }  
         }
@@ -104,8 +115,25 @@
             margin-bottom: 82px ;   
         }
     }
-    
 }
+@media (max-width: $smallTablet) {
+    .member{
+    &__steps {
+        width: 300px; 
+    }
+    .step__first, 
+        .step__second, 
+        .step__third, 
+        .step__fourth {
+            
+            &::after{
+                width: 50px;
+                
+            }  
+        }
+}
+}
+
 @media (max-width: $mobile) {
     .member{
         margin-top: 25px;
