--- a/src/components/SolveProblems/SolveProblems.scss
+++ b/src/components/SolveProblems/SolveProblems.scss
@@ -1,6 +1,11 @@
 @import "../../styles/vars";
 @import "../../styles/_mixin.scss";
 
+#dark .problems {
+    .borderBold {
+        background: rgba(255, 255, 255, 0.08);  
+    }
+}
 .problems {
     margin-top: 128px;
 
@@ -13,23 +18,33 @@
     &__items {
         margin-top: 90px;
         display: flex;
-        justify-content: space-around; 
+        justify-content: space-between; 
+        width: 100%;
         column-gap: 2%; 
 
-            .borderBold{
+            .borderBold {
+                width: 32%;
+                display: flex;
+                justify-content: space-between;  
+                column-gap: 2%;
                 border-radius: 28px;
                 &::before {
                     border: 9px solid #79C14C;
                     border-radius: 28px;
                 }    
             } 
+            .borderBold__inner{
+                width: 100%;
+                min-height: 520px;
+            }
     }
 
-    &__item {
-        width: 94%;  
-    } 
     &__wrapper {
-        min-height: 520px; 
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        
         padding-top: 80px;
         padding-left: 20px;
         padding-right: 20px;
@@ -37,12 +52,14 @@
     }
 
     &__list-title {
+        display: block;
         height: 82px;
         font-size: 32px;
         font-weight: 700;
         }
 
     &__list-items{
+        display: block;
         margin-top: 15px;
     }
     &__list-item{
@@ -53,12 +70,10 @@
                 display: block;
             }
     }
-
 }
-@media (max-width: $tablet)  {
+@media (max-width: 1137px) {
     .problems {
         margin-top: 230px;
-
         &__items {
             margin-top: 80px;
             column-gap: 3%; 
@@ -68,13 +83,10 @@
                     border: 4px solid #79C14C;
                 }    
             } 
+            .borderBold__inner{
+                min-height: 260px;
+            }
         }
-
-        &__item {
-            width: 94%;
-            
-        }
-
         &__wrapper {
             min-height: 260px;
             padding-top: 35px;
@@ -88,55 +100,85 @@
             height: 38px;
         }
 
-        &__list-items{
-            margin-top: 10px;
+        &__list-items {
+            margin-top: 15px;
         }
         &__list-item{
             font-size: 10px;
             line-height: 12px;
-            padding-bottom: 17px;
         }
     }
+}
+@media (max-width: $tablet)  {
+    .problems {
+        &__list-title {
+            font-size: 12px;
+        }
+    
+    &__list-item {
+        font-size: 10px;
+        line-height: 12px;
+        padding-bottom: 17px;
+    }
+}
     
 }
 @media(max-width: $smallTablet) {
-    
+    .problems {
+
+        &__title {
+        font-size: 32px;
+        }
+        &__list-item {
+            padding-bottom: 17px;
+        }
+    }
 }
 
-@media (max-width: $mobile) {
+@media (max-width: 526px){
+    #dark .problems {
+        .borderBold {
+            background: none;  
+        }
+    }
     .problems {
         margin-top: 80px;
-
+        &__title {
+            font-size: 16px;
+        }
         &__items {
             width: 100%;
             display: flex;
             flex-direction: column;
             margin-top: 0px;
-        }
-        &__wrapper{
-            min-height: 30px;
-            padding-bottom: 0;
-        }
-        &__item {
-            padding-bottom: 0;
+
             .borderBold {
+                width: 100%;
                 background: none;
                 &::before {
                     display: none;
                 }   
             } 
             
-            
-            
-            
+            .borderBold__inner{
+                min-height: 40px;
+            }
+        }
+        &__wrapper{ 
+            min-height: 30px;
+            padding-bottom: 0;
+        }
+        &__item {
+            padding-bottom: 0;   
         } 
-        
-
         &__list-title {
             height: 0;
             min-height: 15px;
             font-size: 12px;
             text-align: center;
+            br {
+                display: none;
+            }
         }
 
         &__list-items{
@@ -146,7 +188,7 @@
         
             
         }
-        &__list-item{
+        &__list-item {
             font-size: 8px;
             line-height: 10px;
             padding-bottom: 10px;
@@ -163,3 +205,7 @@
     }    
 }
 
+
+
+@media (max-width: $mobile) {
+}
