--- a/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
+++ b/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
@@ -1,7 +1,22 @@
 @import "../../styles/vars";
 
+#dark .whyRecyclex {
+
+    .borderBold {
+        background: rgba(255, 255, 255, 0.08);  
+    }
+}
+
+#dark .whyRecyclex__divider {
+    border-bottom: 1px solid #ffffff;
+}
+
 .whyRecyclex{
     margin-top: 280px;
+
+    .borderThin {
+        background: none;  
+    }
 
     &__inner {
         margin-top: 85px;
@@ -9,7 +24,7 @@
         padding-left: 18px;
         padding-right: 80px;
         display: flex;
-        column-gap: 5%;
+        column-gap: 8%;
     }
     &__items {
         width: 50%;
@@ -53,7 +68,6 @@
         }
     }
     
-
     &__subTitle {
         padding-top: 15px;
         font-size: 24px;
@@ -119,10 +133,16 @@
 
 }
 @media (max-width: $mobile) {
+    #dark .whyRecyclex {
+
+        .borderBold {
+            background: none;  
+        }
+    }
 
     .whyRecyclex{
-
         margin-top: 80px;
+
         .borderThin{
             &:before{
                 display: none;
@@ -149,7 +169,6 @@
         &__subTitle {
             font-size: 12px;
             line-height: 15px;
-
         }
         &__text {
             font-size: 8px;
@@ -161,7 +180,4 @@
         }
     }
 
-}
-#dark .whyRecyclex__divider {
-    border-bottom: 1px solid #ffffff;
 }
