--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -33,6 +33,13 @@
   flex-direction: column;
 }
 
+.contacts__map {
+    width: 100%;
+    height: 400px;
+    margin-bottom: 40px;
+    border: 0;
+}
+
 .contacts__workers {
   display: flex;
   gap: 20px;
@@ -108,6 +115,10 @@
     flex-direction: column;
   }
 
+  .contacts__map {
+    height: 309px;
+}
+
   .contacts__workers {
     flex-direction: column;
     gap: 20px;
@@ -174,6 +185,11 @@
     display: flex;
     flex-direction: column;
   }
+
+  .contacts__map {
+    height: 119px;
+    margin-bottom: 10px;
+}
 
   .contacts__workers {
     flex-direction: column;
