--- a/src/components/BorderThin/BorderThin.scss
+++ b/src/components/BorderThin/BorderThin.scss
@@ -29,3 +29,25 @@
     background: rgba(255, 255, 255, 0.08);
     border-radius: 30px;
 }
+@media (max-width: $tablet) {
+    .borderThin {
+            &:before {
+                border: 4px solid #36CC25;
+                
+            }
+    }
+}
+@media (max-width: $mobile) {
+    .borderThin {
+        position: relative;
+            &:before {
+                border: 2px solid #36CC25;
+                border-radius: 15px;
+                filter: blur(1.5px);
+            }
+        border-radius: 15px;
+    }
+    #dark .borderThin {
+        border-radius: 15px;
+    }
+}
