--- a/src/pages/WorkScheme/WorkScheme.scss
+++ b/src/pages/WorkScheme/WorkScheme.scss
@@ -1,1 +1,119 @@
 @import "../../styles/vars";
+@import "../../styles/mixin";
+
+.scheme {
+    margin-top: 144px;
+    margin-bottom: 172px;
+    font-size: 22px;
+
+    &_textUp{
+        text-transform: uppercase;
+    }
+
+    &__title {
+        margin-bottom: 77px;
+        font-size: 53px;
+    }
+    &__content {
+        padding: 88px 72px 97px 60px;
+    }
+    &__list-title {
+        margin-bottom: 88px;
+    }
+    &__list {
+        list-style-type: none;
+        margin-bottom: 86px;
+    }
+    &__list-item {
+        position: relative;
+        margin-left: 140px;
+        @include before_circleList;
+    }
+    .list-item_bottom {
+        padding-bottom: 70px;
+    }
+    .text_bottom {
+        padding-bottom: 45px;
+    }
+}
+
+@media (max-width: $tablet)  {
+    .scheme {
+        font-size: 15px;
+        margin-top: 75px;
+        margin-bottom: 95px;
+        
+        &__title {
+            margin-bottom: 52px;
+            font-size: 36px;
+        }
+
+        &__content {
+            padding: 62px 35px 55px 35px;
+        }
+        
+        &__list-title {
+            margin-bottom: 20px;
+        }
+        &__list {
+            margin-bottom: 40px;
+        }
+        &__list-item {
+            margin-left: 80px;
+            &::before {
+                top: 6px;
+                left: -20px;
+                width: 10px;
+                height: 10px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 40px;
+        }
+
+        .text_bottom {
+            padding-bottom: 30px;
+        }
+    }
+}
+
+
+@media (max-width: $mobile)  {
+    .scheme {
+        font-size: 8px;
+        margin-top: 45px;
+        margin-bottom: 20px;
+
+        &__title {
+            margin-bottom: 20px;
+            font-size: 16px;
+        }
+    
+        &__content {
+            padding: 25px 7px 25px 7px;
+        }
+        
+        &__list-title {
+            margin-bottom: 15px;
+        }
+        &__list {
+            margin-bottom: 15px;
+        }
+        &__list-item {
+            margin-left: 41px;
+
+            &::before {
+                top: 3px;
+                left: -12px;
+                width: 6px;
+                height: 6px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 15px;
+        }
+        .text_bottom {
+            padding-bottom: 24px;
+        }
+    }
+}
