--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -18,7 +18,6 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    // background-color: $bgColor;
 }
 
 .help__content {
@@ -26,6 +25,10 @@
     width: 850px;
     max-height: 600px;
     background-color: $bgColor;
+}
+
+#dark .help__content {
+    background-color: $bgColor_dark;
 }
 
 .help__header {
@@ -47,6 +50,11 @@
 .help__cross {
     width: 19px;
     height: 19px;
+    fill: $textColor;
+}
+
+#dark .help__cross {
+    fill: $textColor_dark;
 }
 
 .help__form {
@@ -67,7 +75,6 @@
     border: none;
 
     &:focus {
-        // border-color: $accentColor;
         outline: none;
     }
 }
@@ -90,13 +97,3 @@
     width: 15px;
     height: 15px;
 }
-
-// .help__alertText {
-//     font-size: 12px;
-//     line-height: 12px;
-// }
-
-// .help__inputs {
-//     display: flex;
-//     flex-direction: column;
-// }
