Added route for page Agreement

--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -57,6 +57,14 @@
     fill: $textColor_dark;
 }
 
+.help__agreement {
+    text-decoration: underline;
+}
+
+#dark .help__agreement {
+    color: $textColor_dark;
+}
+
 .help__form {
     display: flex;
     flex-direction: column;
