--- a/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
+++ b/src/pages/CookiesPolicyPage/CookiesPolicyPage.scss
@@ -1,1 +1,260 @@
 @import "../../styles/vars";
+@import "../../styles/mixin";
+
+#dark .сookies__link:hover {
+    color: $accentColor;
+    transition: color 0.1s ease;
+}
+#dark .сookies__link {
+    color: $textColor_dark;
+}
+#dark .сookies_divider {
+    border-bottom: 1px solid #ffffff;
+}
+.сookies {
+    margin-top: 146px;
+    margin-bottom: 134px;
+    font-size: 22px;
+    line-height: 27px;
+    &__content {
+        padding: 88px 60px 82px 60px;
+    }
+
+    &__title {
+        margin-bottom: 77px;
+        font-size: 53px;
+    }
+    &__subtitle {
+        font-size: 40px;
+        line-height: 49px;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
+    &__text{
+        margin-bottom: 60px;
+        a {
+            display: inline;
+            font-size: 22px;
+        }
+    }
+    &__list-title {
+        margin-bottom: 49px;
+    }
+    &__list {
+        list-style-type: none;
+        margin-bottom: 48px;
+    }
+    &__list-item {
+        margin-left: 140px;
+    }
+    .list-item_circleList {
+        position: relative;
+        @include before_circleList;
+    }
+
+    .list-item_bottom {
+        padding-bottom: 60px;
+    }
+    &__subtitle_h3 {
+        font-size: 40px;
+        line-height: 49px;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
+    &__subtitle_h4 {
+        font-size: 22px;
+        line-height: 27px;
+        font-weight: 700;
+    }
+    .text_weight700 {
+        font-weight: 700;
+    }
+    &-type__wrapper{
+        h4 {
+            padding-bottom: 40px;
+        }
+    }
+    &__items {
+        margin-top: 100px;
+    }
+    &__item {
+        display: flex;
+        align-items: end;
+        width: 100%;
+        min-height: 75px;
+        padding-bottom: 12px;
+        column-gap: 6%;
+    }
+    &__title-link {
+        width: 44%;
+    }
+    &__link {
+        display: inline-block;
+        word-wrap: break-word;
+        width: 50%;
+        font-size: 18px;
+    }
+    &_divider {
+        border-bottom: 1px solid #000000;
+    }
+    &__link:hover {
+        color: $accentColor;
+        transition: color 0.1s ease;
+    }   
+}
+
+
+@media (max-width: $tablet)  {
+    .сookies {
+        font-size: 15px;
+        line-height: 18px;
+        margin-top: 75px;
+        margin-bottom: 70px;
+        &__content {
+            padding: 60px 35px 52px 35px;
+        }
+        &__title {
+            margin-bottom: 80px;
+            font-size: 36px;
+        }
+        &__subtitle {
+            font-size: 32px;
+            line-height: 39px;
+            margin-bottom: 10px;
+        }
+        &__text{
+            margin-bottom: 30px;
+            a {
+                font-size: 15px;
+            }
+        }
+        &__subtitle_h3{
+            font-size: 32px;
+            line-height: 39px;
+            margin-bottom: 15px;
+        }
+        &__subtitle_h4 {
+            font-size: 15px;
+            line-height: 18px;
+        }
+        &-type__wrapper{
+            h4 {
+                padding-bottom: 30px;
+            }
+        }
+        &__list-title {
+            margin-bottom: 30px;
+        }
+        &__list {
+            margin-bottom: 30px;
+        }
+        &__list-item {
+            margin-left: 80px;           
+        }
+        .list-item_circleList {
+            &::before {
+                top: 6px;
+                left: -20px;
+                width: 10px;
+                height: 10px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 30px;
+        }
+        &__items {
+            margin-top: 23px;
+        }
+        &__item {
+            min-height: 42px;
+            padding-bottom: 10px;
+        }
+        &__link {
+            font-size: 12px;
+            line-height: 12px;
+        }
+    }
+}
+
+@media (max-width: $mobile)  {
+    .сookies {
+        font-size: 8px;
+        line-height: 10px;
+        margin-top: 52px;
+        margin-bottom: 25px;
+
+        &__content {
+            padding: 25px 7px 25px 7px;
+        }
+
+        &__title {
+            margin-bottom: 20px;
+            font-size: 16px;
+        }
+        &__subtitle {
+            font-size: 14px;
+            line-height: 17px;
+            margin-bottom: 5px;
+        }
+        &__text{
+            margin-bottom: 15px;
+            a {
+                font-size: 8px;
+            }
+        }
+        &__list-title {
+            margin-bottom: 15px;
+        }
+        &__list {
+            margin-bottom: 15px;
+        }
+        &__list-item {
+            margin-left: 41px;
+        }
+        .list-item_circleList {
+            &::before {
+                top: 3px;
+                left: -12px;
+                width: 6px;
+                height: 6px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 15px;
+        }
+        &__subtitle_h3{
+            font-size: 14px;
+            line-height: 18px;
+            margin-bottom: 15px;
+        }
+        &__subtitle_h4 {
+            font-size: 8px;
+            line-height: 10px;
+        }
+        &-type__wrapper{
+            h4 {
+                padding-bottom: 15px;
+            }
+        }
+        &__items {
+            margin-top: 30px;
+        }
+        &__item {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            column-gap: 6%;
+            min-height: 42px;
+            padding-bottom: 5px;
+        }
+        &__title-link {
+            width: 100%;
+        }
+        &__link {
+            width: 100%;
+            font-size: 8px;
+            line-height: 10px;
+        }
+    }
+}
