--- a/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
+++ b/src/pages/PrivacyPolicyPage/PrivacyPolicyPage.scss
@@ -1,1 +1,105 @@
 @import "../../styles/vars";
+@import "../../styles/mixin";
+
+.privacy {
+    margin-top: 146px;
+    margin-bottom: 146px;
+    font-size: 22px;
+
+    &__title {
+        margin-bottom: 77px;
+        font-size: 53px;
+    }
+    &__content {
+        padding: 60px 60px 97px 60px;
+    }
+    &__list-title {
+        margin-bottom: 49px;
+    }
+    &__list {
+        list-style-type: none;
+        margin-bottom: 48px;
+    }
+    &__list-item {
+        position: relative;
+        margin-left: 140px;
+        @include before_circleList;
+    }
+    .list-item_bottom {
+        padding-bottom: 60px;
+    }
+}
+
+@media (max-width: $tablet)  {
+    .privacy {
+        font-size: 15px;
+        margin-top: 75px;
+        margin-bottom: 95px;
+        
+        &__title {
+            margin-bottom: 52px;
+            font-size: 36px;
+        }
+
+        &__content {
+            padding: 53px 35px 60px 35px;
+        }
+        
+        &__list-title {
+            margin-bottom: 30px;
+        }
+        &__list {
+            margin-bottom: 20px;
+        }
+        &__list-item {
+            margin-left: 80px;
+            &::before {
+                top: 6px;
+                left: -20px;
+                width: 10px;
+                height: 10px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 30px;
+        }
+    }
+}
+
+
+@media (max-width: $mobile)  {
+    .privacy {
+        font-size: 8px;
+        margin-top: 45px;
+        margin-bottom: 20px;
+
+        &__title {
+            margin-bottom: 20px;
+            font-size: 16px;
+        }
+    
+        &__content {
+            padding: 25px 7px 25px 7px;
+        }
+        
+        &__list-title {
+            margin-bottom: 15px;
+        }
+        &__list {
+            margin-bottom: 15px;
+        }
+        &__list-item {
+            margin-left: 41px;
+
+            &::before {
+                top: 3px;
+                left: -12px;
+                width: 6px;
+                height: 6px;
+            }
+        }
+        .list-item_bottom {
+            padding-bottom: 15px;
+        }
+    }
+}
