--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -62,41 +62,73 @@
     fill: $textColor_dark;
 }
 
-.help__label {
-    font-size: 24px;
-}
-
 .help__form {
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
 
-.help__row {
+
+// .help__row {
+//     display: flex;
+//     justify-content: space-between;
+// }
+
+// .help__label {
+//     font-size: 24px;
+// }
+
+// .help__inputWrapper {
+//     position: relative;
+// }
+
+// .help__input {
+//     width: 460px;
+//     height: 30px;
+//     padding: 6px 14px;
+//     font-size: 16px;
+//     line-height: 20px;
+//     background-color: #F1F0F0;
+//     border: none;
+
+//     &:focus {
+//         outline: none;
+//     }
+// }
+
+// .help__input_error {
+//     border: 3px solid $accentColor
+// }
+
+// #dark .help__input {
+//     background-color: #FFFFFF;
+// }
+
+// .help__error {
+//     position: absolute;
+//     top: -15px;
+//     left: 0;
+//     font-size: 12px;
+//     line-height: 12px;
+// }
+
+// .help__form textarea {
+//     height: 134px;
+// }
+
+.help__footer {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+}
+.help__helper {
+    width: 30%;
 }
 
-.help__input {
-    width: 460px;
-    height: 30px;
-    padding: 6px 14px;
-    font-size: 16px;
-    line-height: 20px;
-    background-color: #F1F0F0;
-    border: none;
-
-    &:focus {
-        outline: none;
-    }
-}
-
-#dark .help__input {
-    background-color: #FFFFFF;
-}
-
-.help__form textarea {
-    height: 134px;
+.help__alertAndButton {
+    display: flex;
+    flex-direction: column;
+    width: 59%;
 }
 
 .help__alert {
