--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -20,13 +20,8 @@
     height: 100%;
 }
 
-// .help__border {
-//         width: 850px;
-//     max-height: 700px;
-// }
-
 .help__content {
-    padding: 36px 35px 58px 35px;
+    padding: 31px 35px 58px 35px;
     background-color: $bgColor;
     width: 850px;
     max-height: 700px;
@@ -65,56 +60,13 @@
 .help__form {
     display: flex;
     flex-direction: column;
-    gap: 30px;
 }
 
-
-// .help__row {
-//     display: flex;
-//     justify-content: space-between;
-// }
-
-// .help__label {
-//     font-size: 24px;
-// }
-
-// .help__inputWrapper {
-//     position: relative;
-// }
-
-// .help__input {
-//     width: 460px;
-//     height: 30px;
-//     padding: 6px 14px;
-//     font-size: 16px;
-//     line-height: 20px;
-//     background-color: #F1F0F0;
-//     border: none;
-
-//     &:focus {
-//         outline: none;
-//     }
-// }
-
-// .help__input_error {
-//     border: 3px solid $accentColor
-// }
-
-// #dark .help__input {
-//     background-color: #FFFFFF;
-// }
-
-// .help__error {
-//     position: absolute;
-//     top: -15px;
-//     left: 0;
-//     font-size: 12px;
-//     line-height: 12px;
-// }
-
-// .help__form textarea {
-//     height: 134px;
-// }
+.help__rows {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 
 .help__footer {
     display: flex;
@@ -128,7 +80,7 @@
 .help__alertAndButton {
     display: flex;
     flex-direction: column;
-    width: 59%;
+    width: 65%;
 }
 
 .help__alert {
@@ -153,6 +105,64 @@
     color: $textColor_dark;
 }
 
-// .help__button {
-//     width: 250px !important; 
-// }
+@media (max-width: $tablet)  {
+    .help__content {
+        width: 550px;
+        padding: 46px 60px 51px 26px;
+        background-color: $bgColor;
+        max-height: 580px;
+    }
+    
+    #dark .help__content {
+        background-color: $bgColor_dark;
+    }
+    
+    // .help__header {
+    //     margin-bottom: 20px;
+    // }
+    
+    .help__logo {
+        width: 164px;
+    }
+    
+    .help__cross {
+        width: 11px;
+        height: 11px;
+    }
+    
+    #dark .help__cross {
+        fill: $textColor_dark;
+    }
+    
+    .help__rows {
+        gap: 20px;
+    }
+    
+    .help__helper {
+        width: 30%;
+    }
+    
+    .help__alertAndButton {
+        width: 60%;
+    }
+    
+    .help__alert {
+        width: 250px;
+        font-size: 8px;
+        line-height: 8px;
+        margin-bottom: 30px;
+    }
+    
+    .help__alertIcon {
+        width: 15px;
+        height: 15px;
+    }
+    
+    .help__agreement {
+        text-decoration: underline;
+    }
+    
+    #dark .help__agreement {
+        color: $textColor_dark;
+    }
+}
