--- a/src/styles/_btn.scss
+++ b/src/styles/_btn.scss
@@ -77,7 +77,7 @@
 
     .btn_modal {
         width: 200px;
-        padding: 14px 0;
+        padding: 13px 0;
         font-size: 14px;
         line-height: 14px;
     }
@@ -100,6 +100,13 @@
     }
   }
 
+  @media screen and (max-width: $smallTablet) {
+    .btn_modal {
+        width: 160px;
+        padding: 13px 0;
+    }
+}
+
   @media screen and (max-width: $mobile) {
     .btn {
         width: 200px;
@@ -116,5 +123,6 @@
 
     .btn_modal {
         width: 160px;
+        padding: 13px 0;
     }
   }
