Добавила разметку на странице соглашение

--- a/src/pages/Agreement/Agreement.scss
+++ b/src/pages/Agreement/Agreement.scss
@@ -1,1 +1,93 @@
 @import "../../styles/vars";
+
+.agreement {
+    margin-top: 69px;
+    margin-bottom: 50px;
+    font-size: 22px;
+
+    &__title {
+        margin-bottom: 15px;
+        font-size: 64px;
+    }
+    &__content {
+        padding: 60px 60px 70px 60px;
+    }
+    &__list-title {
+        margin-bottom: 40px;
+    }
+    &__list {
+        list-style-type: none;
+        margin-bottom: 40px;
+    }
+    &__list-item {
+        margin-bottom: 40px
+    }
+    
+    &__text {
+        margin-bottom: 40px;
+        address {display: inline;}
+    }
+}
+
+@media (max-width: $tablet)  {
+    .agreement {
+        font-size: 15px;
+        margin-top: 75px;
+        margin-bottom: 70px;
+        
+        &__title {
+            margin-bottom: 25px;
+            font-size: 36px;
+        }
+
+        &__content {
+            padding: 45px 35px 45px 35px;
+        }
+        
+        &__list-title {
+            margin-bottom: 30px;
+        }
+        &__list {
+            margin-bottom: 30px;
+        }
+        &__list-item {
+            margin-bottom: 30px
+        }
+        &__text {
+            margin-bottom: 30px;
+            
+        }
+        
+    }
+}
+
+
+@media (max-width: $mobile)  {
+    .agreement {
+        font-size: 8px;
+        margin-top: 32px;
+        margin-bottom: 20px;
+
+        &__title {
+            margin-bottom: 15px;
+            font-size: 16px;
+        }
+    
+        &__content {
+            padding: 20px 8px 20px 8px;
+        }
+        
+        &__list-title {
+            margin-bottom: 20px;
+        }
+        &__list {
+            margin-bottom: 20px;
+        }
+        &__list-item {
+            margin-bottom: 20px; 
+        }
+        &__text {
+            margin-bottom: 20px;  
+        }
+    }
+}
