--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -1,11 +1,7 @@
 @import "../../styles/_vars.scss";
 @import "../../styles/_mixin.scss";
 
-#dark .advantages {
-    .borderBold {
-        background: rgba(255, 255, 255, 0.08);  
-    }
-}
+
 .advantages {
     margin-top: 305px;
     
@@ -21,23 +17,17 @@
     }
 
     &__items {
-        margin-top: 110px;
+        margin-top: 130px;
         display: flex;
         justify-content: space-between;  
-        column-gap: 2%;
-
-        .borderBold{
-            width: 23%;   
-        } 
-        .borderBold__inner{
-            width: 100%;
-            padding-top: 10px;
-            padding-left: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-        }
     }
+
     &__item {
+        width: 23%;
+        padding-top: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px; 
         display: flex;
         flex-direction: column;
     }
@@ -45,7 +35,6 @@
     &__btn {
         margin: 0 auto;
         margin-top: 70px; 
-
         .btn {
             display: block;  
         }
@@ -93,17 +82,9 @@
 }
 
 @media (max-width: 1137px){
-    .advantages {
-        
+    .advantages {       
     &__items {
         margin-top: 80px;
-        column-gap: 3%;
-
-        .borderBold {
-            &::before {
-                border: 4px solid #85D454;
-            }    
-        } 
     }
 
     &__btn{ 
@@ -133,27 +114,30 @@
     .advantages {   
     .item__title {
         font-size: 16px;
+        line-height: 20px;
         }
     .item__text {
             font-size: 12px;
+            line-height: 16px;
         } 
-    }
-    
+    }   
 }
 @media (max-width: $tablet)  {
-    .advantages {   
-        .item__title {
-            font-size: 14px;
-            }
-        .item__text {
-                font-size: 10px;
-            } 
+    .advantages { 
+        margin-top: 300px;
+        &__items {
+            margin-top: 110px;
+        } 
+        &__item{
+            width: 25%;
+            padding-left: 5px;
+            padding-right: 5px;
         }
+    }
 
 }
 
-@media(max-width: 883px) {
-    
+@media(max-width: 822px) {
     .advantages {
         &__title {
             font-size: 32px;
@@ -161,52 +145,33 @@
         &__items {
             flex-wrap: wrap;
             justify-content: center;
-            column-gap: 160px;
-            row-gap: 60px;
-
-            .borderBold {
-                width: 160px; 
-                min-height: 230px;  
-            }   
         }
+        &__item {
+            width: 50%; 
+            min-height: 230px;
+            align-items: center;
+        }  
 
         .item__title {
-            font-size: 15px;
-            }
-
-        .item__img {  
-            height: 90px;
-            padding-top: 20px;
-            padding-left: 5px;
-            padding-right: 5px;
-            padding-bottom: 5px;
-        }
-        .item__title {
-            font-size: 13px;
+            font-size: 16px;
+            line-height: 20px;
             }
 
         .item__text {
             min-height: 40px;
-            font-size: 10px;
+            max-width: 195px;
+            font-size: 12px;
+            line-height: 16px;
         } 
     }
 }
 
-@media (max-width:839px) {
+@media (max-width: $mobile){
     .advantages {
-    &__items {
-        flex-wrap: wrap;
-        justify-content: center;
-        column-gap: 120px;
-}
-}
-}
-@media (max-width: 526px){
-    .advantages {
-        margin-top: 164px;
+        margin-top: 160px;
         
     &__title {
-        font-size: 16px;
+        font-size: 18px;
         margin: 0 auto;
     }
     
@@ -215,26 +180,13 @@
         flex-wrap: nowrap;
         flex-direction: column;
         align-items: center;
-        row-gap: 10px; 
-
-        .borderBold {
-            width: 100%;
-            min-height: 80px;
-            border-radius: 15px; 
-            &::before {
-                border: 2px solid #85D454;
-                border-radius: 15px;
-            } 
-            
-            .borderBold__inner{
-                padding-bottom: 0;
-                padding-top: 0;
-            }
-        }  
+        row-gap: 10px;  
     }
     &__item {
         width: 100%;
+        min-height: 80px;
         flex-direction: row;
+        padding: 0;
         column-gap: 7%;
         align-items: flex-start;
     } 
@@ -246,9 +198,13 @@
     .item__img {
         width: 22%;
         height: 70px;
+        padding-top: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-bottom: 5px;
     }
     .item__wrapper {
-        padding-top: 20px;
+        padding-top: 15px;
         padding-bottom: 0;
         margin-bottom: 0;
         width: 75%;
@@ -257,13 +213,13 @@
     .item__title {
         padding-top: 0;
         margin-top: 0;
-        font-size: 15px;
+        font-size: 16px;
         text-align: left;
         }
     .item__text {
         margin: 0;
         padding-top: 0;
-        font-size: 10px;
+        font-size: 11px;
         line-height: 13px;
         text-align: left; 
         }   
