--- a/src/components/SolveProblems/SolveProblems.scss
+++ b/src/components/SolveProblems/SolveProblems.scss
@@ -1,11 +1,10 @@
 @import "../../styles/vars";
 @import "../../styles/_mixin.scss";
 
-#dark .problems {
-    .borderBold {
-        background: rgba(255, 255, 255, 0.08);  
-    }
+#dark .problems__item {
+        background: #1A1A1A;
 }
+
 .problems {
     margin-top: 128px;
 
@@ -22,22 +21,18 @@
         width: 100%;
         column-gap: 2%; 
 
-            .borderBold {
-                width: 32%;
+            
+    }
+    &__item{
+        width: 32%;
                 display: flex;
                 justify-content: space-between;  
                 column-gap: 2%;
                 border-radius: 28px;
-                &::before {
-                    border: 9px solid #79C14C;
-                    border-radius: 28px;
-                }    
-            } 
-            .borderBold__inner{
-                width: 100%;
-                min-height: 520px;
-            }
-    }
+                background: #F7F7F7;  
+                border-radius:30px;               
+} 
+
 
     &__wrapper {
         width: 100%;
@@ -77,15 +72,10 @@
         &__items {
             margin-top: 80px;
             column-gap: 3%; 
+        }
+        &__item{
+            min-height: 260px;
 
-            .borderBold {
-                &::before {
-                    border: 4px solid #79C14C;
-                }    
-            } 
-            .borderBold__inner{
-                min-height: 260px;
-            }
         }
         &__wrapper {
             min-height: 260px;
@@ -136,10 +126,8 @@
 }
 
 @media (max-width: 526px){
-    #dark .problems {
-        .borderBold {
+    #dark .problems__item { 
             background: none;  
-        }
     }
     .problems {
         margin-top: 80px;
@@ -152,18 +140,15 @@
             flex-direction: column;
             margin-top: 0px;
 
-            .borderBold {
-                width: 100%;
-                background: none;
-                &::before {
-                    display: none;
-                }   
-            } 
-            
-            .borderBold__inner{
-                min-height: 40px;
-            }
         }
+
+        &__item {
+            width: 100%;
+            background: none;
+            min-height: 40px;
+
+        }
+
         &__wrapper{ 
             min-height: 30px;
             padding-bottom: 0;
