--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,8 +5,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 5px;
+    width: 92%;
     height: 120px;
-    border-bottom: solid 1px $textColor;
 }
 
 #dark .header__inner {
@@ -22,6 +22,7 @@
     justify-content: space-evenly;
     align-items: center;
     font-size: 20px;
+    line-height: 20px;
     gap: 5px;
 }
 
@@ -42,29 +43,29 @@
 }
 
 
-.header__link_border {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 180px;
-    padding: 11px 0;
-    font-size: 14px;
-    border: 1px solid $textColor;
-    line-height: 14px;
-    text-transform: uppercase;
+// .header__link_border {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     width: 180px;
+//     padding: 11px 0;
+//     font-size: 14px;
+//     border: 1px solid $textColor;
+//     line-height: 14px;
+//     text-transform: uppercase;
 
-    &:hover {
-        border-color: $accentColor;
-    }
-}
+//     &:hover {
+//         border-color: $accentColor;
+//     }
+// }
 
-#dark .header__link_border {
-    border-color: $textColor_dark;
+// #dark .header__link_border {
+//     border-color: $textColor_dark;
 
-    &:hover {
-        border-color: $accentColor;
-    }
-}
+//     &:hover {
+//         border-color: $accentColor;
+//     }
+// }
 
 .header__logo {
     width: 199px;
@@ -88,12 +89,12 @@
         width: 171px;
     }
 
-    .header__link_border {
-        width: 140px;
-        padding: 7px 0;
-        font-size: 12px;
-        text-transform: none;
-    }
+    // .header__link_border {
+    //     width: 140px;
+    //     padding: 7px 0;
+    //     font-size: 12px;
+    //     text-transform: none;
+    // }
 }
 
 @media (max-width: 850px)  {
@@ -155,27 +156,27 @@
         background-color: $bgColor_dark;
     }
 
-    .header__link_border {
-        justify-content: flex-start;
-        width: 100%;
-        border-top: none;
-        text-transform: none;
-        font-size: 12px;
-        line-height: 12px;
+    // .header__link_border {
+    //     justify-content: flex-start;
+    //     width: 100%;
+    //     border-top: none;
+    //     text-transform: none;
+    //     font-size: 12px;
+    //     line-height: 12px;
 
-        &:hover {
-            border-color: $textColor;
-        }
-    }
+    //     &:hover {
+    //         border-color: $textColor;
+    //     }
+    // }
 
-    #dark .header__link_border {
-        border-color: $textColor_dark;
-        border-top: $textColor_dark;
+    // #dark .header__link_border {
+    //     border-color: $textColor_dark;
+    //     border-top: $textColor_dark;
     
-        &:hover {
-            border-color: $textColor_dark;
-        }
-    }
+    //     &:hover {
+    //         border-color: $textColor_dark;
+    //     }
+    // }
 
     .header__logo {
         width: 108px;
@@ -183,7 +184,7 @@
 
     .header__burger {
         display: block;
-        width: 25px;
+        width: 30px;
         cursor: pointer;
     }
 
